# splatty

./: .gitignore  CMakeLists.txt  README.md  compiletimestuff.ixx  glsplat.ixx  glwindow-splat.cpp  glwindow-splat.h  glwindow.cpp  glwindow.h  glwindow.ixx  happly.h  main-avec-consoles-stack.js  main.cpp  main.js  shaders.ixx  splatty.ixx
splatlib/: CMakeLists.txt  compiletimestuff.ixx  glsplat.ixx  shaders.ixx  splatcoroutine.ixx  splatdata.ixx  splatmath.ixx  splatopengl.ixx  splatreader.ixx  splatshaders.ixx  splatty.ixx
splatlib/res/: fragmentShader.frag  vertexShader.vert
